--- a/src/static/index-template.html
+++ b/src/static/index-template.html
@@ -24,7 +24,7 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">
                 <i class="material-icons">cloud</i>
-                PWA
+                Logo
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
@@ -50,6 +50,8 @@
                         <i class="material-icons">more_vert</i>
                     </a>
                 </li>
+
+                <!-- Dropdown -->
                 <ul id="dropdown1" class="dropdown-content">
                     <li>
                         <a href="#!">one</a>
@@ -69,6 +71,7 @@
                     </a>
                 </li>
             </ul>
+
             <ul id="nav-mobile" class="side-nav">
                 <li>
                     <a href="#">Navbar Link</a>
@@ -117,11 +120,70 @@
             </a>
         </div>
     </nav>
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <br>
+            <br>
+            <h1 class="header center orange-text">Starter Template</h1>
+            <div class="row center">
+                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+            </div>
+            <div class="row center">
+                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+            </div>
+            <br>
+            <br>
+        </div>
+    </div>
+
 
     <div class="container">
-        <h1 class="header- center orange-text">Progressive Web App</h1>
+        <div class="section">
 
-        <div id="app">Loading...</div>
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">flash_on</i>
+                        </h2>
+                        <h5 class="center">Speeds up development</h5>
+
+                        <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom
+                            components. Additionally, we refined animations and transitions to provide a smoother experience
+                            for developers.</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">group</i>
+                        </h2>
+                        <h5 class="center">User Experience Focused</h5>
+
+                        <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that
+                            incorporates components and animations that provide more feedback to users. Additionally, a single
+                            underlying responsive system across all platforms allow for a more unified user experience.</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">settings</i>
+                        </h2>
+                        <h5 class="center">Easy to work with</h5>
+
+                        <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started.
+                            We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <br>
+        <br>
     </div>
 
     <footer class="page-footer orange">
@@ -131,6 +193,7 @@
                     <h5 class="white-text">Company Bio</h5>
                     <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would
                         help support and continue development on this project and is greatly appreciated.</p>
+
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Settings</h5>
@@ -179,7 +242,6 @@
     <script src="lib/jquery.min.js"></script>
     <script src="lib/materialize/js/materialize.min.js"></script>
     <script src="lib/incremental-dom-min.js"></script>
-    <script src="index.js"></script>
     <script>
         $(".button-collapse").sideNav();
     </script>
