--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Peter Rybar, pr.rybar@gmail.com">
+
     <title>Progressive Web App</title>
+
+    <link rel="stylesheet" href="/lib/material-design-lite/material.min.css">
+    <script src="/lib/material-design-lite/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/styles.css">
+
     <meta id="theme-color" name="theme-color" content="#37474F">
     <meta name=”apple-mobile-web-app-capable” content=”yes”>
     <link rel="manifest" href="manifest.json">
+
 </head>
 <body>
     <h1>Progressive Web App</h1>
