--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Peter Rybar, pr.rybar@gmail.com">
     <title>Progressive Web App</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <meta id="theme-color" name="theme-color" content="#37474F">
     <meta name=”apple-mobile-web-app-capable” content=”yes”>
     <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
-    <h1>Progressive Web App</h1>
-
-    <div id="app">Loading...</div>
-
     <script src="lib/incremental-dom-min.js"></script>
+    <script src="lib/leaflet/leaflet.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
