--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,6 +16,7 @@
         }
     </style>
     <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="lib/leaflet-control-geocoder/Control.Geocoder.css">
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <meta id="theme-color" name="theme-color" content="#37474F">
     <meta name=”apple-mobile-web-app-capable” content=”yes”>
@@ -25,6 +26,8 @@
 <body>
     <script src="lib/incremental-dom-min.js"></script>
     <script src="lib/leaflet/leaflet.js"></script>
+    <script src="lib/leaflet-control-geocoder/Control.Geocoder.js"></script>
+    <script src="lib/store.js"></script>
     <script src="index.js"></script>
 </body>
 
